--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -43,7 +43,7 @@
     margin: auto auto 0px auto;
   }
   &-container {
-    margin: 150px auto;
+    margin: 100px auto;
   }
   &-social {
     text-align: center;
@@ -54,7 +54,7 @@
     text-size: 18px;
     letter-spacing: .02em;
     line-height: 1.6em;
-    padding: 30px;
+    padding: 0 30px;
   }
   &-body div:first-child {
     font-size: 25px;
